recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:2: error: not found: value nbPas
  if (nbPas!=0){
      ^